--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,50 +1,204 @@
-<% unless @playlist.image_file_name.nil? %>
-	<p>
-		<%= image_tag @playlist.image.url %>
-	</p>
-<% end %>
+<div class="container container-global">
 
-<p>
+<!-- <p>
   <strong>User:</strong>
   <%= @playlist.user.username %>
 </p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @playlist.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @playlist.description %>
-</p>
-
-<p>
-  <h3>Songs:</h3>
-  <% unless @playlist.songs.empty? %>
-  <ul id="songs">
-  <% @playlist.songs.each do |song| %>
-    <li data-url="<%= song.file.url %>">
-		<%= link_to song.title, song_path(song) %>
-		<% if owner?(@playlist) %>
-			<%= link_to raw('<span class="glyphicon glyphicon-remove"></span>'), { action: "remove", song_id: song.id, playlist_id: @playlist.id }, data: { confirm: "Are you sure you want to remove #{song.title} from #{@playlist.name} ?" } %>
-		<% end %>
-    </li>
-  <% end %>
-  </ul>
-  <% else %>
-    This playlist has no songs yet.
-  <% end %>
-</p>
-
+ -->
 <% unless @playlist.songs.empty? %>
 	<p><%= audio_tag(@playlist.songs.first.file.url, autoplay: false, controls: true, id: 'player_zikror') %></p>
 <% end %>
+		<!-- Sidebar -->
+		<div class="row">
+			<div class="sidebar">
+				<div class="block-logo">
+					<%= image_tag('logo-zkr.png') %>
+				</div>
+				<div class="container-list">
+					<div class="list-sidemenu-music">
+						<ul>
+							<li>
+								<span class="head-list">MES MUSIQUES</span>
+								<ul class="filter-list">
+									<li><a href="">Toutes</a></li>
+									<li><a href="">Artistes</a></li>
+									<li><a href="">Genre</a></li>
+									<li><a href="">Favorites</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
 
-<% if owner?(@playlist) %>
-	<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
-<% end %>
-<%= link_to 'Back', playlists_path %>
+					<div class="list-sidemenu-music second-list">
+						<ul>
+							<li>
+								<span class="head-list">MES PLAYLISTS</span>
+								<ul class="filter-list">
+									<li><a href=""></a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="add-playlist">
+				<%= image_tag('add.png') %>
+					<a href="add-music.html" class="link-add-music">Ajouter une musique</a>
+					<a href="" class="link-add-playlist">Ajouter une playlist</a>
+				</div>
+			</div>
+
+			<div class="page-content">
+				<div class="head">
+					<div class="audio">
+						<audio id="mejs" src="09 Mission In India.mp3" class="mejs__player">test</audio>
+					</div>
+					<h1 class="title-head"><%= correct_user? ? "PROFIL" : "PROFIL DE #{@playlist.user.username}" %></h1>
+					<div class="avatar">
+						<figure style="background-image: url(<%= gravatar_src(@playlist.user) %>); background-size: cover;">
+							
+						</figure>
+						<span><%= @playlist.user.username %></span>
+					</div>
+					<form class="form-search form-search-musique">
+						<div class="form-group">
+							<input type="text" name="search-title" placeholder="Rechercher un titre">
+							<button type="submit"><%= image_tag('search.png') %></button>
+						</div>
+					</form>
+
+					
+				</div>
+				<!-- Modal -->
+				<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        ...
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				        <button type="button" class="btn btn-primary">Save changes</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+				<div class="container-fluid">
+					<%= image_tag('zikror.png', class: "bg-content") %>
+					<div class="row">
+						<ul class="nav-profil">
+							<li class=""><span>RETOURNER À LA PAGE D'ACCUEIL</span></li>
+							<li class=""><span><%= link_to 'PARCOURIR LES PLAYLISTS', playlists_path %>	</span></li>
+							<% if owner?(@playlist) %>
+								<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
+							<% end %>
+							<div class="menu-profil">
+								<%= image_tag('menu-show.png', class: "show-img", style:"display:none;") %>
+								<%= image_tag('multiply.png', class: "close-img") %>
+							</div>
+						</ul>
+						<div class="col-lg-9 col-md-8 content-page">
+							<div class="block-info-playlist">
+								<div class="img-playlist">
+									<% unless @playlist.image_file_name.nil? %>
+										<p>
+											<%= image_tag @playlist.image.url %>
+										</p>
+									<% end %>
+								</div>
+								<div class="text-info-playlist">
+									<h1><%= @playlist.name %></h1>
+									<p>
+									  <strong>Description:</strong>
+									  <%= @playlist.description %>
+									</p>
+								</div>
+							</div>
+							<table class="table musique">
+								<thead>
+									  <% unless @playlist.songs.empty? %>
+
+									<tr class="disabled-tr">
+										<th>#</th>
+										<th class="action-music"></th>
+										<th>Titre</th>
+										<th>Artiste</th>
+										<th>Genre</th>
+										<th>Durée</th>
+										<th class="last-th">Actions</th>
+									</tr>
+									<tbody>
+									  <% @playlist.songs.each do |song| %>
+									  <tr id="songs">
+										 	 <th>1</th>
+										 	 <th class="th-music">
+													<%= image_tag('play-button.png', class: "play-music", :data => { :url => "test" }) %>
+												</th>
+										    <th data-url="<%= song.file.url %>">
+												<%= link_to song.title, song_path(song) %>
+										    </th>
+										    <th></th>
+												<th></th>
+												<th></th>
+												<th></th>
+												<th class="th-action">
+													<!-- <a data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a> -->
+													<a href="" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
+													<a href="edit-music.html" class="action-zik"><%= image_tag('new-file.png') %></a>
+													<% if owner?(@playlist) %>
+													<%= link_to raw('<span class="glyphicon glyphicon-remove"></span>'), { action: "remove", song_id: song.id, playlist_id: @playlist.id }, data: { confirm: "Êtes-vous certain de vouloir supprimer #{song.title} de cette playlist ?" } %>
+												<% end %>
+													<a href="" class="action-zik"><%= image_tag('delete-button.png') %></a>
+												</th>
+											</tr>		
+									  <% end %>
+									  
+									<!-- each -->
+									</tbody>
+									<% else %>
+									    Aucune chanson n'a été ajouté à cette playlist. 
+									  <% end %>
+								</thead>
+							</table>
+					
+						</div>
+						<div class="profil-side col-lg-3 col-md-4">
+							<form class="form-search form-search-profil">
+								<div class="form-group">
+									<input type="text" name="search-title" placeholder="Rechercher un profil">
+									<button type="submit"><%= image_tag('search.png') %></button>
+								</div>
+							</form>
+							<div class="center-vertical">
+								<div class="bloc-bottom">
+									<div class="avatar-profil" style="background: url(<%= gravatar_src(@playlist.user) %>); background-size: cover">
+									</div>
+									<span class="username"><%= @playlist.user.username %></span>
+									<span>Email : <%= @playlist.user.mail %></span>
+									<span>Inscrit le : 12/12/1200</span>
+									<span>Musiques : 200</span>
+									<div class="button">
+										<%= link_to 'PARAMETRES', edit_user_path(@playlist.user) %>
+									</div>
+									<div class=""> <!-- right-btn-head-menu -->
+										<!-- <%= image_tag('logout.png') %> -->
+									<%= button_to "Deconnexion", logout_path, :method => "delete" %>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 <script type="text/javascript">
 	var songs = $('#songs li'),
