--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,9 +1,9 @@
  <div class="head-logo">
     <%= image_tag('zikror.png') %>
   </div>
-  <div class="content-page">
-  <div class="container">
-    <div class="row">
+  <div class="content-page-login">
+  <div class="container-login">
+    <div class="row-login">
       <div class="col-md-5 signin-form form-content">
         <header>
           <span class="answer">Vous avez un compte ?</span><br/>
