--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title>RubyOnRailsProjetLibre</title>
     <%= csrf_meta_tags %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:900" rel="stylesheet"> 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -14,8 +15,7 @@
   	<div class="container">
 	<% if logged_in? %>
 		<div>
-			<p><%= link_to current_user.username, user_path(current_user) %></p>
-			<p><%= button_to "Log out", logout_path, :method => "delete" %></p>
+    <!-- <p><%= link_to current_user.username, user_path(current_user) %></p> -->
 		</div>
 	<% end %>
 
