--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,7 +9,7 @@
 /* Reset */
 body, html {
   /*overflow-x: hidden;*/
-  overflow-y: hidden !important;
+  overflow-y: hidden;
 }
 
 h1{
@@ -40,6 +40,11 @@ a:hover{
 	height: 100vh;
 }
 
+.container-fluid{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
 .sidebar{
 	height: 100%;
 	padding-left: 20px;
@@ -48,6 +53,7 @@ a:hover{
 	width: 200px;
 	position: fixed;
 	z-index: 2;
+	overflow-x: hidden; 
 }
 
 .block-logo{
@@ -93,10 +99,9 @@ a:hover{
 .second-list{top: 50px;	}
 
 .add-playlist {
-	padding: 20px 35px;
 	width: 200px;
 	position: relative;
-	top: 425px;
+	top: 125px;
 	border-top: 1px solid #444;
 	left: -20px;
 }
@@ -266,6 +271,11 @@ a:hover{
 	background: #e20b42;
 }
 
+.mejs__time-loaded{
+	height: 6px;
+}
+
+
 /* Responsive */
 @media(max-width: 1370px){
 	.mejs__time-rail{
@@ -397,6 +407,77 @@ tr img, .action-music{
 .bloc-bottom{
 	padding: 0px 20px;
 	position: relative;
+	height: 300px;
+	overflow: hidden;
+	.button{
+		width: 200px;
+		border-radius: 5px;
+		padding: 5px 0px;
+		border: 2px solid #fff;
+		background-color: transparent;
+		font-size: 1.5rem;
+		font-weight: 600;
+		transition: 0.2s;
+		margin-top: 25px;
+		display: inline-block;
+	}
+	.description-profil{
+		font-style: italic;
+		text-align: center;
+		opacity: 0.5;
+	}
+	.list-all-profil{
+		.title-user{
+			font-size: 2rem;
+		}
+		div{
+			padding-bottom: 10px;
+			padding-top: 10px;
+			margin-right: 20px;
+			margin-left: 20px;
+			border-bottom: 1px solid #444;
+			img{
+				float: left;
+				border-radius: 100%;
+				margin-right: 10px;
+			}
+			li{
+				text-align: left;
+			}
+		}
+	}
+	.action-sidebar-profil{
+		border: none !important;
+		padding-bottom: 0px !important;	
+	}
+}
+
+.active-li-sidebar span{
+	border-bottom: 3px solid #e20b42;
+}
+
+.deconnect-profil{
+	position: absolute;
+	bottom: 10px;
+	right: 35px;
+	&:hover{
+		cursor: pointer;
+	};
+	img{
+		width: 35px;
+		padding-right: 5px;
+	}
+	.span-deconnect{
+		display: none;
+	}
+}
+
+.parcourir-profil-sidebar li:hover span{
+	border-bottom: 3px solid #e20b42;
+}
+
+.deconnect-profil:hover .span-deconnect{
+	display: inline;
 }
 
 .bloc-bottom span{
@@ -464,17 +545,6 @@ tr img, .action-music{
 	left: 50%;
 }
 
-.link-add-music{
-	position: relative;
-	top: 23px;
-	left: 0px;
-}
-
-.link-add-playlist{
-	position: relative;
-	top: 39px;
-}
-
 .add-playlist img{
 	width: 30px;
 	position: absolute;
@@ -483,6 +553,34 @@ tr img, .action-music{
 	transform: translateX(-50%);
 	background: #232323;
 }
+
+.link-add-music{
+	position: relative;
+	top: 46px;
+	width: 25px;
+	left: 50px;
+	img{
+		width: 26px;
+		position: relative;
+		top: -16px;
+		left: 50%;
+	}
+}
+
+.link-add-playlist{
+	position: relative;
+	top: 49px;
+	width: 25px;
+	right: 94px;
+	img{
+		width: 26px;
+		position: relative;
+		top: -16px;
+		left: 50%;
+	}
+}
+
+
 
 .divider-block-playlist{
 	width: 190px;
@@ -559,6 +657,38 @@ tr img, .action-music{
 	border: 0px !important;
 }
 
+.list-playlist{
+	text-overflow: ellipsis;
+}
+
+.glyphicon-option-horizontal{
+	font-size: 2.3rem !important;
+	&:hover{
+		cursor: pointer;
+	}
+}
+
+.parcourir-profil-sidebar{
+	position: relative;
+	bottom: 50px;
+	.profil-sidebar{
+		display: inline;
+		border-right: 1px solid #fff;
+		padding-right: 10px;
+		font-weight: 600;
+		&:hover{
+			cursor: pointer;
+		};
+	}
+	.parcourir-sidebar{
+		display: inline;
+		padding-left: 10px;
+		font-weight: 600;
+		&:hover{
+			cursor: pointer;
+		};
+	}
+}
 
 @media(max-width: 1270px){
 	.mejs__container{
