--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,3 @@
-
-<!--<% if @user.songs.size == 0 %>
-	<strong><%= "#{@user.username} has not uploaded any song yet" %></strong>
-<% end %>
-
-<ul>
-	<% @artists.each do |a| %>
-		<li><%= "#{a[0]} - #{a[1]}" %></li>
-	<% end %>
-</ul> -->
 	<div class="container container-global">
 		<!-- Sidebar -->
 		<div class="row">
@@ -17,7 +7,7 @@
 				<div class="head">
 					<div class="audio">
 						<% if @user.songs.size > 0 %>
-						<audio id="mejs" src="<%= @user.songs.first.file.url %>" class="mejs__player">test</audio>
+							<audio id="mejs" src="<%= @user.songs.first.file.url %>" class="mejs__player"></audio>
 						<% end %>
 					</div>
 					<h1 class="title-head"><%= correct_user? ? "PROFIL" : "PROFIL DE #{@user.username}" %></h1>
