--- a/app/assets/stylesheets/playlists.scss
+++ b/app/assets/stylesheets/playlists.scss
@@ -5,3 +5,16 @@
 .playing {
 	color: red;
 }
+
+.edit_playlist input{
+	background: none;
+	border: none;
+	border-bottom: 1px solid #ffffff;
+	width: 100%;
+	margin-top: 23px;
+	padding: 0px 10px 10px 10px;
+}
+
+.edit_playlist .file-upload{
+	bottom: 302px;
+}
