--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Playlist</h1>
-
 <% if @playlist.errors.any? %>
   <div id="error_explanation">
     <ul>
@@ -10,24 +8,47 @@
   </div>
 <% end %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-  <%= form_for(@playlist) do |f| %>
+<div class="container">
+  <!-- Sidebar -->
+  <div class="row row-edit">
+    <div class="page-content-edit">
+      <div class="head-edit">
+        <h1 class="title-head-admin">ADMINISTRATION</h1>
 
-  	<%= f.label :name %>
-  	<%= f.text_field :name, class: 'form-control' %>
-
-  	<%= f.label :description %>
-  	<%= f.text_area :description, class: 'form-control' %>
-
-	<%= f.label :image %>
-	<%= f.file_field :image, class: 'form-control' %>
-
-	<br/><br/>
-  	<%= f.submit 'Save', class: 'btn btn-primary' %>
-
-  <% end %>
+        <div class="avatar avatar-edit">
+          <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
+            
+          </figure>
+          <span><%= link_to current_user.username, user_path(current_user) %></span>
+        </div>
+        <div class="deconnect-edit">
+          <%= image_tag('logout.png') %>
+          <span><%= link_to "Deconnexion", logout_path, :method => "delete" %></span>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <!-- <img src="img/zikror.png" class="bg-content"> -->
+        <div class="row">
+          <div class="col-lg-6 col-md-6 content-page-edit col-md-offset-3">
+          <h3>Ajouter une playlist</h3>
+          <%= form_for(@playlist) do |f| %>
+            <%= f.text_field :name, placeholder: 'Ajouter un titre*' %>
+            <%= f.text_area :description, placeholder: 'Ajouter une description' %>
+            <input type="text" name="" disabled="disabled" id="value-file" class="input-text file" placeholder="Ajouter une pièce jointe">
+            <div class="file-upload">
+              <%= image_tag('upload.png') %>
+              <%= f.file_field :image, class: 'upload' %>
+            </div>
+           
+            <div class="block-btn-edit">
+            <a href="<%= user_path(current_user) %>"><button type="button" class="btn-cancel-account">ANNULER</button></a>
+            <%= f.button :VALIDER, value: "VALIDER" %>
+            </div>
+            <p>*Champ obligatoire </p>
+          <% end %>         
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-<%= link_to 'Back', playlists_path %>
