--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing Song</h1>
-
 <% if @song.errors.any? %>
   <div id="error_explanation">
     <ul>
@@ -9,37 +7,6 @@
     </ul>
   </div>
 <% end %>
-
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<%= form_for(@song) do |f| %>
-			<%= f.label :title %>
-			<%= f.text_field :title %>
-
-			<%= f.label :artist %>
-			<%= f.text_field :artist %>
-
-			<%= f.label :year %>
-			<%= f.number_field :year %>
-
-			<%= f.label :genre %>
-			<%= f.text_field :genre %>
-
-			<%= f.label :private %>
-			<%= f.check_box :private %>
-			<br/><br/>
-			<%= f.submit "Update", class: "btn btn-primary" %>
-		<% end %>
-	</div>
-</div>
-
-<p>
-	<%= link_to 'Destroy', @song, method: :delete, data: { confirm: 'Are you sure?' } %>
-</p>
-
-<%= link_to 'Show', @song %> |
-<%= link_to 'Back', songs_path %>
-
 <div class="container">
     <!-- Sidebar -->
     <div class="row row-edit">
@@ -51,24 +18,29 @@
             <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
               
             </figure>
-            <span><%= current_user.username %></span>
+            <span><%= link_to current_user.username, user_path(current_user) %></span>
           </div>
           <div class="deconnect-edit">
             <%= image_tag('logout.png') %>
-            <span><a href="">Deconnexion</a></span>
+            <span><%= link_to "Deconnexion", logout_path, :method => "delete" %></span>
           </div>
         </div>
         <div class="container-fluid">
-          <!-- <img src="img/zikror.png" class="bg-content"> -->
           <div class="row">
             <div class="col-lg-6 col-md-6 content-page-edit col-md-offset-3">
-            <h3>Ajouter une musique</h3>
+            <h3>Editez votre musique<br/>
+            <%= link_to 'VOIR - ', @song %>
+            <%= link_to 'SUPPRIMER', @song, method: :delete, data: { confirm: 'Etes vous certain de vouloir supprimer cette musique ?' } %>
+            </h3>
             <%= form_for(@song) do |f| %>
-              <%= f.text_field :title, placeholder: "Ajouter un titre à la musique" %>
-              <%= f.text_field :artist, placeholder: "Ajouter l'artiste de cette musique" %>
-              <%= f.number_field :year, placeholder: "Ajouter l'année de cette musique" %>
-              <%= f.text_field :genre, placeholder: "Ajouter un genre de musique" %>
-              <%= f.file_field :file%>
+              <%= f.text_field :title, placeholder: "Modifier le titre de cette musique" %>
+              <%= f.text_field :artist, placeholder: "Modifier l'artiste de cette musique" %>
+              <%= f.number_field :year, placeholder: "Modifier l'année de cette musique" %>
+              <%= f.text_field :genre, placeholder: "Modifier le genre de musique" %>
+              <div class="checkboxThree">
+                <%= f.check_box :private, id: "private", class: "css-checkbox" %>
+                <label class="css-label" for="private"></label>
+              </div>
               <div class="block-btn-edit">
               <a href="<%= user_path(current_user) %>"><button type="button" class="btn-cancel-account">ANNULER</button></a>
               <%= f.button :VALIDER, value: "VALIDER" %>
@@ -78,9 +50,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="bloc-logo"> 
-        <%= image_tag('zikror.png', class: "logo-2") %>
       </div>
     </div>
 
