--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,30 +1,3 @@
-<!-- <h1>New Song</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-  <%= form_for(@song) do |f| %>
-
-  	<%= f.label :title %>
-  	<%= f.text_field :title, class: 'form-control' %>
-
-  	<%= f.label :artist %>
-  	<%= f.text_field :artist, class: 'form-control' %>
-
-  	<%= f.label :year %>
-  	<%= f.number_field :year, class: 'form-control' %>
-
-  	<%= f.label :genre %>
-  	<%= f.text_field :genre, class: 'form-control' %>
-
-    <%= f.label :file %><strong>Must be mp3</strong>
-  	<%= f.file_field :file, class: 'form-control' %>
-
-  	<%= f.label :private %>
-  	<%= f.check_box :private %>
-
-	<br/><br/>
-  	<%= f.submit 'Save', class: 'btn btn-primary' %>
-    <% end %> -->
 <div class="container">
     <!-- Sidebar -->
     <div class="row row-edit">
@@ -36,11 +9,11 @@
             <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
               
             </figure>
-            <span><%= current_user.username %></span>
+            <span><%= link_to current_user.username, user_path(current_user) %></span>
           </div>
           <div class="deconnect-edit">
             <%= image_tag('logout.png') %>
-            <span><a href="">Deconnexion</a></span>
+            <span><%= link_to "Deconnexion", logout_path, :method => "delete" %></a>
           </div>
         </div>
         <div class="container-fluid">
@@ -71,9 +44,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="bloc-logo"> 
-        <%= image_tag('zikror.png', class: "logo-2") %>
       </div>
     </div>
 
